--- a/templates/stub.html
+++ b/templates/stub.html
@@ -9,9 +9,58 @@
     <!- Try building a new body here, bootstrap is a wise choice ->
     <div class="px-5 py-5 mx-auto">
         <h1 class="text-primary"><strong>Stubby Body</strong></h1>
-        <p class="text-secondary">SOHAM KAMAT</p>
+        <p class="text-secondary">Soham Kamat</p>
     </div>
+    <style>
+    table,
+    td {
+       border: 1px solid #333;
+    }
+
+    thead,
+    tfoot {
+        background-color: #333;
+        color: #fff;
+    }
+    </style>
+
+    <table>
+        <thead>
+            <tr>
+                <th colspan="2">School Schedule</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td> Period 1 </td>
+                <td> Mrs. Callicott </td>
+            </tr>
+            <tr>
+                <td> Period 2 </td>
+                <td> Mr. Campillo </td>
+            </tr>
+            <tr>
+                <td> Period 3 </td>
+                <td> Mrs. Bueller </td>
+            </tr>
+            <tr>
+                <td> Period 4 </td>
+                <td> Mrs. James </td>
+            </tr>
+            <tr>
+                <td> Period 5 </td>
+                <td> Mr. Yeung </td>
+            </tr>
+            
+        </tbody>
+    </table>
+  
+  
 {% endblock %}
+
+
+
+
 
 <!- This is turning off birds background from base.html -->
 {% block background %}
