--- a/templates/stub.html
+++ b/templates/stub.html
@@ -8,9 +8,9 @@
 {% block body %}
     <!- Try building a new body here, bootstrap is a wise choice ->
     <div class="px-5 py-5 mx-auto">
-        <h1 class="text-primary"><strong>Stubby Body</strong></h1>
-        <p class="text-secondary">Soham Kamat</p>
-    </div>
+        <h1 class="text-primary"><strong>About Soham Kamat</strong></h1>
+        <p class="text-secondary">Soham Kamat is a high school student who has created this flask server as a part of AP Computer Science Principals. Here is my class schedule below:</p>
+
     <style>
     table,
     td {
@@ -53,6 +53,7 @@
             </tr>
             
         </tbody>
+      </div>
     </table>
   
   
