--- a/templates/index.html
+++ b/templates/index.html
@@ -4,57 +4,56 @@
 {% block body %}
     <!-- Start of body content specific to page -->
     <div class="px-5 py-5 mx-auto">
-        <h1 class="text-white"><strong>Python Home Page</strong></h1>
+        <h1 class="text-white"><strong>Soham Kamat's Home Page</strong></h1>
         <div class="row">
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='assets/python.jpeg') }}" alt="Python Development" height="250">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/welcome.jpg') }}" alt="Welcome" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">What should <mark>Student Developers learn</mark>?</h5>
+                    <h5 class="card-title"><mark>Where am I?</mark></h5>
                     <p class="card-text">
                         <ol>
-                            <li>Python 3.9 is used for most of our backend PBL. HTML, CSS, JavaScript will be used in frontend</li>
-                            <li>Visuals Studio Code (VS Code) is the primary editor, Interactive Development Environment (IDE).</li>
-                            <li>GitHub.  Managing and sharing code change, branches, pull requests, issues, and more will be through GitHub.</li>
-                            <li>DevOps. Python programmers should have a passion for managing the environment and learning automation (Git, Linux, Bash, Python Packages, Docker).</li>
-                            <li>API and Microservice using Flask.  Mastering development techniques in creating and consuming RESTful APIs</li>
+                            <mark>Hello, Welcome to Soham Kamat's locally ran Python/Flask server!
+                            This server is meant to test my ability to create a standalone Web application.
+                            The expectation is to use this framework for group work or other backend development.
+                            Flask is the app framework while Python is the backend development language(More about this is in the next card).<mark>
                         </ol>
                     </p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <!--<a href="#" class="btn btn-primary">Go somewhere</a>-->
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='assets/flask.png') }}" alt="Flask Development" height="250">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/coding.png') }}" alt="1010 code" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">What is <mark>Flask</mark>? How do I start Web development?</h5>
+                    <h5 class="card-title"><mark>What runs this server?</mark></h5>
                     <p class="card-text">
                         <ol>
-                            <li>Flask Framework is the popular Web Application development framework of Python.</li>
-                            <li>Blueprint is utility to help abstract complexity, moving information in independent files and directories.</li>
-                            <li>HTML using Bootstrap is a great way to build interesting pages and reduce CSS</li>
-                            <li>Jinja2 is a server-side Python like template engine, supports HTML5 web development, and provides full integration with Flask.</li>
+                            <mark>Flask is a coding framework that is used to develop Web Applications and is ran by Python language.
+                            Python language is what runs Flask Framework but it is not the only language.
+                            Jinja2 is a template language and works well with both Flask and Python.
+                            HTML, CSS, and JavaScript support the frontend work build while the Flask/Python Project is the backend service for Fastpages/Github Pages.</mark>
                         </ol>
                     </p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <!--<a href="#" class="btn btn-primary">Go somewhere</a>-->
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='assets/pythondb.png') }}" alt="Backend and Persistence" height="250">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/looking.png') }}" alt="What to find" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">How do you manage <mark>Persistent data</mark> with Python?</h5>
+                    <h5 class="card-title"><mark>What you can find on this server?</mark></h5>
                     <p class="card-text">
                         <ol>
-                            <li>A Database is an example of persistent data that is held on a computer.  Programming languages and frameworks allow you to store and retrive data.</li>
-                            <li>SQL stands for Structured Query Language · SQL lets you access and manipulate databases and has become a long lasting development standard.</li>
-                            <li>SQLAlchemy is the Python SQL toolkit and Object Relational Mapper (ORM) that gives application developers the full power and flexibility of SQL.</li>
-                            <li>There are many newer and sometimes easier Database languages and frameworks.  Mongo, DynamoDB, Neo4J are Databases being used by students developers in last 3 years.</li>
+                            <mark>This server contains infomation on the purpose of this project as while as what runs it(look at the two other cards on this page).
+                            It also has some infomation about me and my coding group. 
+                            That infomation is found in the about me tag at the top left of this page.
+                            More inofmation about this project and its process will be added to this server as time goes on.<mark>
                         </ol>
                     </p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <!--<a href="#" class="btn btn-primary">Go somewhere</a>-->
                     </div>
                 </div>
             </div>
